--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/order-details/order-details-view/order-details-view.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/order-details/order-details-view/order-details-view.component.html
@@ -51,7 +51,7 @@
                                     <div>{{
 										logs?.uploadedAwbFile?.originalname
 									}}</div>&nbsp;
-                                    <a href="{{ logs?.uploadedAwbFile?.url }}" target="_self" download="{{
+                                    <a href="{{ logs?.uploadedAwbFile?.url }}" target="_blank" download="{{
 										logs?.uploadedAwbFile?.originalname
 									}}"><img src="assets/media/icons/_download.svg" alt="" width="14px" /></a>
                                 </div>
@@ -61,7 +61,7 @@
                                     <div> {{
 										logs?.uploadedAwbBox?.originalname
 									}}</div>&nbsp;
-                                    <a href="{{ logs?.uploadedAwbBox?.url }}" target="_self" download="{{
+                                    <a href="{{ logs?.uploadedAwbBox?.url }}" target="_blank" download="{{
 										logs?.uploadedAwbBox?.originalname
 									}}"><img src="assets/media/icons/_download.svg" alt="" width="14px" /></a>
                                 </div>
