--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/refund-details/refund-details-edit/refund-details-edit.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/refund-details/refund-details-edit/refund-details-edit.component.html
@@ -173,7 +173,7 @@
                         </div>
                         <div class="col-8">
                             <a class="text-body" [href]="refundData.passbookCopy.url"
-                                download="{{refundData.passbookCopy.originalname}}">
+                                download="{{refundData.passbookCopy.originalname}}" target="_blank">
                                 <span>{{refundData.passbookCopy.originalname}}</span>
                                 <span class="pl-2">
                                     <img height="12" width="12" [src]="'assets/media/icons/_download.svg'">
@@ -187,7 +187,7 @@
                         </div>
                         <div class="col-8">
                             <a class="text-body" [href]="refundData.passbookCopy.url"
-                                download="{{refundData.passbookCopy.originalname}}">
+                                download="{{refundData.passbookCopy.originalname}}" target="_blank">
                                 <span>{{refundData.passbookCopy.originalname}}</span>
                                 <span class="pl-2">
                                     <img height="12" width="12" [src]="'assets/media/icons/_download.svg'">
