--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/refund-details/refund-details-view/refund-details-view.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/refund-details/refund-details-view/refund-details-view.component.html
@@ -177,7 +177,7 @@
                 <div class="row">
                     <div class="col-6 text-muted">Passbook Copy :</div>
                     <div class="col-4">{{refundData?.passbookCopy?.originalname}}</div>
-                    <div class="col-2"><a href="{{refundData?.passbookCopy?.url}}" target="_self"
+                    <div class="col-2"><a href="{{refundData?.passbookCopy?.url}}" target="_blank"
                             download="{{refundData?.passbookCopy?.originalname}}"><img
                                 src="assets/media/icons/_download.svg" alt="" width="50%"></a></div>
                 </div>
@@ -188,7 +188,7 @@
                 <div class="row">
                     <div class="col-6 text-muted">Check Copy:</div>
                     <div class="col-4">{{refundData?.checkCopy?.originalname}}</div>
-                    <div class="col-2"><a href="{{refundData?.checkCopy?.url}}" target="_self"
+                    <div class="col-2"><a href="{{refundData?.checkCopy?.url}}" target="_blank"
                             download="{{refundData?.passbookCopy?.originalname}}"><img
                                 src="assets/media/icons/_download.svg" alt="" width="50%"></a></div>
                 </div>
