Changes in filter & poduct edit

--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -71,11 +71,11 @@
                         (click)="applyFilter()">
                       </kt-button>
                     </div>
-                    <div class="col-12 pt-2">
+                    <!-- <div class="col-12 pt-2">
                       <mat-error *ngIf="controls.priceFrom.value > controls.priceTo.value">
                         <span>Price To should be greater than Price From</span>
                       </mat-error>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
