--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
@@ -98,7 +98,8 @@
                             placeholder="0,00,000" (blur)="amountValidation()"
                             [class.isError]="controls.finalLoanAmount.touched && controls.finalLoanAmount.invalid" />
                         <mat-hint><small>Eligible Amount: {{totalAmt | currency: 'INR'}}</small></mat-hint>
-                        <mat-error
+                        <div>
+                            <mat-error
                             *ngIf="controls.finalLoanAmount.errors?.required && controls.finalLoanAmount.touched">
                             Required field
                         </mat-error>
@@ -111,6 +112,8 @@
                         <mat-error *ngIf="controls.finalLoanAmount.errors?.eligibleAmt">
                             <small>Amount should be less then Eligible Amount</small>
                         </mat-error>
+                        </div>
+    
 
                     </div>
                 </div>
