--- a/gold-admin-frontend/src/app/views/pages/loan-settings/karat-details/add-karat-details/add-karat-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-settings/karat-details/add-karat-details/add-karat-details.component.html
@@ -50,26 +50,24 @@
                                 Invalid Percentage
                             </mat-error>
                         </div>
-                            <div class="col-4">
-                                <input class="form-control" formControlName="toPercentage" autocomplete="off"
-                                    placeholder="To %"
-                                    [class.isError]="controls.toPercentage.touched && controls.toPercentage.invalid">
-                                <mat-error
-                                    *ngIf="controls.toPercentage.touched && controls.toPercentage.errors?.required">
-                                    Required
-                                    field</mat-error>
-                                <mat-error
-                                    *ngIf="controls.toPercentage.touched && controls.toPercentage.errors?.pattern">
-                                    Invalid Percentage
-                                </mat-error>
-                            </div>
+                        <div class="col-4">
+                            <input class="form-control" formControlName="toPercentage" autocomplete="off"
+                                placeholder="To %"
+                                [class.isError]="controls.toPercentage.touched && controls.toPercentage.invalid">
+                            <mat-error *ngIf="controls.toPercentage.touched && controls.toPercentage.errors?.required">
+                                Required
+                                field</mat-error>
+                            <mat-error *ngIf="controls.toPercentage.touched && controls.toPercentage.errors?.pattern">
+                                Invalid Percentage
+                            </mat-error>
                         </div>
                     </div>
+                </div>
             </form>
         </div>
     </div>
     <kt-portlet-footer>
-        <div class="p-3">
+        <div class="p-4">
             <kt-modal-footer *ngIf="data.action == 'add'" (action)="action($event)" [value]="data.action">
             </kt-modal-footer>
             <kt-modal-footer *ngIf="data.action == 'edit'" (action)="action($event)" [value]="'Update'">
