--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/refund-details/refund-details-list/refund-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/refund-details/refund-details-list/refund-details.component.html
@@ -209,7 +209,7 @@
                     <mat-cell *matCellDef="let element">
                         <div [ngStyle]="{'display': 'inherit'}">
                             <div *ngxPermissionsOnly="['refundDetailsView']" (click)="viewRefund(element)"
-                                class="kt-pointer"> View | &nbsp;</div>
+                                class="kt-pointer"> View </div>
                             <div *ngxPermissionsOnly="['refundDetailsEdit']" class="px-1">|</div>
                             <div *ngxPermissionsOnly="['refundDetailsEdit']" (click)="editRefund(element)"
                                 class="kt-pointer"> Edit</div>
