--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/order-details/order-details-edit/order-details-edit.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/order-details/order-details-edit/order-details-edit.component.html
@@ -196,7 +196,7 @@
                         </div>
                     </div>
                     <div class="row kt-margin-t-15" *ngIf="hiddenFlag">
-                        <div class="col-12 text-center">
+                        <div class="col-12 text-right">
                             <kt-button [value]="'Update'" [type]="'submit'" (click)="submit()"></kt-button>
                         </div>
                     </div>
