--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/refund-details/refund-details-edit/refund-details-edit.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/refund-details/refund-details-edit/refund-details-edit.component.html
@@ -220,7 +220,7 @@
                         </div>
                     </div>
                     <div class="row kt-margin-t-15">
-                        <div class="col-12 text-center">
+                        <div class="col-12 text-right">
                             <kt-button [value]="'Update'" [type]="'submit'" (click)="submit()"></kt-button>
                         </div>
                     </div>
