--- a/gold-admin-frontend/src/app/views/pages/upload-data/upload-lender-banner/upload-lender-banner.component.html
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/upload-lender-banner/upload-lender-banner.component.html
@@ -12,7 +12,7 @@
         </div>
         <kt-uplod-data-image [images]="images"></kt-uplod-data-image>
     </kt-portlet-body>
-    <kt-portlet-footer>
+    <kt-portlet-footer *ngxPermissionsOnly="['partnerBannerAdd']">
         <div class="row p-3">
             <div class="col-lg-12 kt-padding-l-15">
                 <kt-button [type]="'button'" [value]="'Save'" (click)="uploadLenderBanners()">
