--- a/gold-admin-frontend/src/app/views/pages/upload-data/upload-offer/upload-offer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/upload-offer/upload-offer.component.html
@@ -2,61 +2,63 @@
 
 <kt-portlet>
     <kt-portlet-body style="min-height: 79vh;">
-        <div class="row kt-padding-t-20 " *ngIf="gold">
-            <div class="col-3 font-weight-bold text-color d-flex align-items-center" placeholder="">Upload Gold Rate
-            </div>
-            <div class="col-3 per-gram d-flex align-items-center">
-                <input type="text" class="form-control" numbersOnly [formControl]="goldRate"
-                    [class.isError]="goldRate.invalid && goldRate.touched">
-                <mat-error *ngIf="goldRate.invalid && goldRate.touched">Field required</mat-error>
-            </div>
-            <div class="col">
-                <div class="row">
-                    <div class="col-4 offset-1" style="font-weight: 500;">
-                        <p>Previous Gold Rate</p>
+        <div *ngxPermissionsOnly="['goldRateView']">
+            <div class="row kt-padding-t-20 " *ngIf="gold" >
+                <div class="col-3 font-weight-bold text-color d-flex align-items-center" placeholder="">Upload Gold Rate
+                </div>
+                <div class="col-3 per-gram d-flex align-items-center">
+                    <input type="text" class="form-control" numbersOnly [formControl]="goldRate"
+                        [class.isError]="goldRate.invalid && goldRate.touched">
+                    <mat-error *ngIf="goldRate.invalid && goldRate.touched">Field required</mat-error>
+                </div>
+                <div class="col">
+                    <div class="row">
+                        <div class="col-4 offset-1" style="font-weight: 500;">
+                            <p>Previous Gold Rate</p>
+                        </div>
+                        <div class="col" style="font-weight: 400;">
+                            <p>{{gold.previousGoldRate}} per gram</p>
+                        </div>
                     </div>
-                    <div class="col" style="font-weight: 400;">
-                        <p>{{gold.previousGoldRate}} per gram</p>
+    
+                    <div class="row">
+                        <div class="col-4 offset-1" style="font-weight: 500;">
+                            <p>Last Updated</p>
+                        </div>
+                        <div class="col" style="font-weight: 400;">
+                            <p>{{ gold.updatedAt | date:'medium'}}</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4 offset-1" style="font-weight: 500;">
+                            <p>Updated By</p>
+                        </div>
+                        <div class="col" style="font-weight: 400;">
+                            <p>{{ gold.Modifiedby.firstName | titlecase }} &nbsp; {{ gold.Modifiedby.lastName | titlecase }}
+                            </p>
+                        </div>
                     </div>
                 </div>
-
-                <div class="row">
-                    <div class="col-4 offset-1" style="font-weight: 500;">
-                        <p>Last Updated</p>
-                    </div>
-                    <div class="col" style="font-weight: 400;">
-                        <p>{{ gold.updatedAt | date:'medium'}}</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-4 offset-1" style="font-weight: 500;">
-                        <p>Updated By</p>
-                    </div>
-                    <div class="col" style="font-weight: 400;">
-                        <p>{{ gold.Modifiedby.firstName | titlecase }} &nbsp; {{ gold.Modifiedby.lastName | titlecase }}
-                        </p>
-                    </div>
+    
+            </div>
+            <div class="row kt-margin-t-20 kt-margin-b-40" *ngxPermissionsOnly="['goldRateAdd']">
+                <div class="col-lg-12">
+                    <kt-button [type]="'button'" [value]="'Save'" (click)="updateGoldRate()">
+                    </kt-button>
                 </div>
             </div>
-
         </div>
-        <div class="row kt-margin-t-20 kt-margin-b-40">
-            <div class="col-lg-12">
-                <kt-button [type]="'button'" [value]="'Save'" (click)="updateGoldRate()">
-                </kt-button>
-            </div>
-        </div>
-        <div class="row">
+        <div class="row" *ngxPermissionsOnly="['offerBannerView']">
             <div class="col-12">
                 <label class="font-weight-bold text-color d-flex align-items-center">Upload Offer Banners</label>
                 <label class="font-weight-500 text-gray d-flex align-items-center"> 600px X 300px with .jpg or
                     .png</label>
             </div>
         </div>
-        <kt-uplod-data-image [images]="images"></kt-uplod-data-image>
+        <kt-uplod-data-image *ngxPermissionsOnly="['offerBannerView']" [images]="images"></kt-uplod-data-image>
 
     </kt-portlet-body>
-    <kt-portlet-footer>
+    <kt-portlet-footer *ngxPermissionsOnly="['offerBannerAdd']">
         <div class="row p-3">
             <div class="col-lg-12 kt-padding-l-15">
                 <kt-button [type]="'button'" [value]="'Save'" (click)="save()">
