--- a/gold-admin-frontend/src/app/views/pages/customer-management/loan-details/loan-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/customer-management/loan-details/loan-details.component.html
@@ -1,4 +1,4 @@
-<div class="kt-margin-r-5 kt-margin-l-5 pb-3" *ngIf="loanDetails">
+<div class="kt-margin-l-10 kt-margin-r-10 pb-3" *ngIf="loanDetails">
     <div class="row ">
         <div class="col-12 card kt-padding-15">
             <div class="row justify-content-around kt-padding-b-15">
@@ -63,7 +63,8 @@
                 </div>
                 <div class="col">
                     <div class="text-gray font-weight-500 kt-margin-b-5">Nominee</div>
-                    <div class="text-color font-weight-500">{{loanDetails.loanNomineeDetail[0].nomineeName | titlecase}}</div>
+                    <div class="text-color font-weight-500">{{loanDetails.loanNomineeDetail[0].nomineeName | titlecase}}
+                    </div>
                 </div>
                 <div class="col">
                     <div class="text-gray font-weight-500 kt-margin-b-5">Age</div>
@@ -71,7 +72,8 @@
                 </div>
                 <div class="col">
                     <div class="text-gray font-weight-500 kt-margin-b-5">Relation</div>
-                    <div class="text-color font-weight-500">{{loanDetails.loanNomineeDetail[0].relationship | titlecase}}</div>
+                    <div class="text-color font-weight-500">
+                        {{loanDetails.loanNomineeDetail[0].relationship | titlecase}}</div>
                 </div>
             </div>
         </div>
